<resources>
    <string name="app_name">YT_UILover_Project81</string>
    <string name="create_account">Create\nAccount</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="image_background_top_arc">Image Background Top Arc</string>
    <string name="clickable_create_an_account_image">Clickable Create An Account Image</string>
</resources>